# py-web-crawler

./: .gitignore  README.md  pyproject.toml
src/: crawler.py  monzo-links.txt  urls.txt
src/cache/: cache.py  local_cache.py  redis_cache.py
src/io/: file_io.py
src/service/: base_service.py  lookup_service.py  robots_service.py  session_service.py
src/services/: file_service.py  link_service.py  lookup_service.py  rate_limit_service.py  redis_service.py  robots_service.py  session_service.py
src/tests/: crawler_test.py
src/util/: link_parser.py  rate_limiter.py
tests/: test_crawler.py
tests/cache/: test_local_cache.py  test_redis_cache.py
tests/service/: test_lookup_service.py  test_robots_service.py  test_session_service.py
tests/util/: test_link_parser.py  test_rate_limiter.py
