[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = ""
authors = ["priyanshu-sekhar <pri.patra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
bs4 = "^0.0.2"
aiofiles = "^23.2.1"
aioredis = "^2.0.1"
robotexclusionrulesparser = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
